utoipa-gen/tests/snapshots/path_derive__derive_path_with_extensions.snap
---
source: utoipa-gen/tests/path_derive.rs
assertion_line: 309
expression: "operation.pointer(\"/x-extension-1\").unwrap()"
---
{
  "type": "extension1"
}
