utoipa-gen/tests/snapshots/path_derive__derive_path_with_into_params_custom_schema.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: value
snapshot_kind: text
---
[
  {
    "in": "query",
    "name": "email",
    "required": false,
    "schema": {
      "description": "this is the description",
      "format": "email",
      "type": "string"
    }
  }
]
