utoipa-gen/tests/snapshots/path_derive__derive_path_with_into_responses.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: parameters
snapshot_kind: text
---
{
  "200": {
    "description": "Ok"
  },
  "404": {
    "description": "Not Found"
  }
}
