utoipa-gen/tests/snapshots/path_derive__derive_path_with_multiple_methods.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&paths"
snapshot_kind: text
---
{
  "/test-multiple": {
    "get": {
      "operationId": "test_multiple",
      "responses": {
        "200": {
          "description": "success response"
        }
      },
      "tags": []
    },
    "head": {
      "operationId": "test_multiple",
      "responses": {
        "200": {
          "description": "success response"
        }
      },
      "tags": []
    }
  }
}
