utoipa-gen/tests/snapshots/path_derive__derive_path_with_multiple_tags.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: "&operation"
snapshot_kind: text
---
{
  "operationId": "get_items",
  "responses": {
    "200": {
      "description": "success response"
    }
  },
  "tags": [
    "mytag",
    "one",
    "two",
    "another"
  ]
}
