utoipa-gen/tests/snapshots/path_derive__derive_path_with_response_links.snap
---
source: utoipa-gen/tests/path_derive.rs
assertion_line: 1600
expression: "&paths"
---
{
  "/test-links": {
    "get": {
      "operationId": "test_links",
      "responses": {
        "200": {
          "description": "success response",
          "links": {
            "getBar": {
              "operationRef": "this is ref"
            },
            "getFoo": {
              "operationId": "test_links",
              "parameters": {
                "json_value": 1,
                "key": "value"
              },
              "requestBody": "this is body",
              "server": {
                "url": "http://localhost"
              }
            }
          }
        }
      },
      "tags": []
    }
  }
}
